# zkID

.github/workflows/: build.yml  ecdsa-spartan2.yaml  ecdsa-spartan2.yml  jwt-es256-circom-tests.yaml
paper/: .gitignore  abstract.tex  annex.tex  annex2.tex  annex_notes.md  annex_table.tex  biblio.bib  eudi_application.tex  experiments.tex  intro.md  intro.tex  intro2.tex  intro3.tex  main.tex  preliminaries.tex  references.bib  security.tex  zkID_construction.tex  zkID_overview.tex
wallet-unit-poc/: README.md
wallet-unit-poc/circom/: circomkit.json  circuits.json  package.json
wallet-unit-poc/circom/circuits/: claim-decoder.circom  ec-extractor.circom  es256.circom  jwt.circom  payload_matcher.circom  show.circom  utils.circom
wallet-unit-poc/circom/circuits/ecdsa/: ecdsa.circom
wallet-unit-poc/circom/circuits/main/: jwt.circom  show.circom
wallet-unit-poc/circom/scripts/: compile.sh
wallet-unit-poc/circom/src/: jwt.ts  mock-vc-generator.ts  show.ts
wallet-unit-poc/circom/tests/: age-jwt.test.ts  device-binding.test.ts  jwt.test.ts
wallet-unit-poc/ecdsa-spartan2/: 1kb  2kb  3kb  4kb  5kb  6kb  Cargo.toml  README.md  script.sh
wallet-unit-poc/ecdsa-spartan2/.cargo/: config.toml
wallet-unit-poc/ecdsa-spartan2/logs/: 1920_bytes  1kb  5kb  6kb  7kb  8kb
wallet-unit-poc/ecdsa-spartan2/src/: config_generator.rs  ecdsa_circuit.rs  jwt_circuit.rs  lib.rs  main.rs  prepare_circuit.rs  prover.rs  setup.rs  show_circuit.rs  utils.rs
wallet-unit-poc/ecdsa-spartan2/src/circuits/: prepare_circuit.rs  show_circuit.rs
(+16 files in other folders)
